# console_bridge-fuerte-release

./: .hg_archival.txt  .hgtags  CMakeLists.txt  bloom.conf  debian.store  package.xml  patches.conf  stack.xml
debian/: changelog  control  gbp.conf  rules
