<?xml version="1.0"?>
<package>
  <name>console_bridge</name>
  <version>0.1.2</version>
  <description>Lightweight tool for forwarding output from libraries to other
  logging systems.</description>
  <author email="lunaryan@gmail.com">Ryan Luna</author>
  <author email="isucan@willowgarage.com">Ioan Sucan</author>
  <maintainer email="isucan@willowgarage.com">Ioan Sucan</maintainer>

  <license>BSD</license>
  <url>https://kforge.ros.org/projects/console_bridge/</url>

  <build_depend>catkin</build_depend>
  <build_depend>boost</build_depend>
  
  <run_depend>boost</run_depend> 
  
  <buildtool_depend>cmake</buildtool_depend>

</package>
